--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Youtube Video</title>
+    <title>Rock in a Box</title>
     <!-- Adding styles for the YouTube video -->
     <style>
       .youtube-video {
